# arduino

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: README-5min.yml  READMEMIN.yml  Update12Hours.yml  Update24Hours.yml  Update36Hours.yml  main.yml  pr-creator.yml
data/mnist/: train-images.idx3-ubyte
include/: cli.h  color_spaces.h  dataset.h  preprocessing.h  svm.h  utils.h
lights/: rbg-light-with-rotary-encoder-push-button.ino  rgb.ino  rotary-encoder-with-push-button.ino
scripts/: download_mnist.sh  preprocess_examples.sh
src/: cli.cpp  color_spaces.cpp  dataset.cpp  main.cpp  preprocessing.cpp  preprocessing_advanced.cpp  svm.cpp  utils.cpp
tests/: test_preprocessing.cpp  test_preprocessing_advanced.cpp  test_preprocessing_integration.cpp
